<?xml version="1.0"?>
<package format="2">
  <name>omni_car_description</name>
  <version>0.1.0</version>
  <description>The omni_car_description package</description>

  <maintainer email="rafal.krynski13@gmail.com">Rafal Krynski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
